--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,7 +15,15 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <!-- tailwind and daisy ui -->
-
+    <!-- font-awesome Cdn-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <!-- font-awesome Cdn-->
     <!-- font  manrope-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -24,7 +32,24 @@
       rel="stylesheet"
     />
     <!-- font  manrope-->
-
+    <!-- tailwind Config -->
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              primary: "#FF4240",
+              "primary-100": "#fa1916",
+              secondary: "#131318",
+              light: "#fff",
+              "light-100": "#1313180F",
+              'light-50':'#FFFFFF99'
+            },
+          },
+        },
+      };
+    </script>
+    <!-- tailwind Config -->
     <!-- custom css -->
     <style>
       .font-manrope {
@@ -34,8 +59,68 @@
     <!-- custom css -->
   </head>
   <body class="font-manrope">
+    <header class="container mx-auto my-5">
+      <div class="navbar bg-base-100">
+        <div class="navbar-start">
+          <div class="dropdown">
+            <div
+              tabindex="0"
+              role="button"
+              class="btn btn-ghost b-red lg:hidden"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-5 w-5"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M4 6h16M4 12h8m-8 6h16"
+                />
+              </svg>
+            </div>
+            <ul
+              tabindex="0"
+              class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-gray-100 rounded-box w-52"
+            >
+              <li class="font-bold text-primary ">
+                <a>Home</a>
+              </li>
+              <li><a>About</a></li>
+              <li><a>Pages</a></li>
+              <li><a>Blog</a></li>
+              <li><a>Contact</a></li>
+            </ul>
+          </div>
+          <a class="text-2xl font-extrabold text-secondary">Hockey’s</a>
+        </div>
 
+        <div class="navbar-center hidden lg:flex">
+          <ul class="flex space-x-10 px-1">
+            <li class="font-bold text-primary"><a>Home</a></li>
+            <li><a>About</a></li>
+            <li><a>Pages</a></li>
+            <li><a>Blog</a></li>
+            <li><a>Contact</a></li>
+          </ul>
+        </div>
 
+        <div class="navbar-end space-x-6">
+          <i
+            class="fa-solid fa-magnifying-glass text-gray-400 hidden lg:block"
+          ></i>
+          <a
+            class="btn bg-primary hover:bg-primary-100 text-light transition-colors px-6 py-4"
+            >Get Ticket</a
+          >
+        </div>
+      </div>
+    </header>
     
+   
   </body>
 </html>
