--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               secondary: "#131318",
               light: "#fff",
               "light-100": "#1313180F",
-              'light-50':'#FFFFFF99'
+              'dark-100': '#13131899'
             },
           },
         },
@@ -120,7 +120,68 @@
         </div>
       </div>
     </header>
-    
+    <main class="container mx-auto px-2 lg:px-0">
+      <!-- carousel -->
+      <section class="my-5">
+        <div class="carousel w-full lg:h-[70vh]">
+          <div id="slide1" class="carousel-item relative w-full">
+            <img src="images/1.png" class="w-full" />
+            <div class="absolute flex justify-between transform left-10 bottom-5 space-x-5">
+              <a href="#slide4" class="btn btn-circle  bg-secondary text-light outline-none">❮</a> 
+              <a href="#slide2" class="btn btn-circle  bg-secondary text-light outline-none">❯</a>
+            </div>
+          </div> 
+          <div id="slide2" class="carousel-item relative w-full">
+            <img src="images/2.png" class="w-full" />
+            <div class="absolute flex justify-between transform left-10 bottom-5 space-x-5">
+              <a href="#slide1" class="btn btn-circle  bg-secondary text-light outline-none">❮</a> 
+              <a href="#slide3" class="btn btn-circle  bg-secondary text-light outline-none">❯</a>
+            </div>
+          </div> 
+          <div id="slide3" class="carousel-item relative w-full">
+            <img src="images/3.png" class="w-full" />
+            <div class="absolute flex justify-between transform left-10 bottom-5 space-x-5">
+              <a href="#slide2" class="btn btn-circle  bg-secondary text-light outline-none">❮</a> 
+              <a href="#slide4" class="btn btn-circle  bg-secondary text-light outline-none">❯</a>
+            </div>
+          </div> 
+          <div id="slide4" class="carousel-item relative w-full">
+            <img src="images/4.png" class="w-full" />
+            <div class="absolute flex justify-between transform left-10 bottom-5 space-x-5">
+              <a href="#slide3" class="btn btn-circle  bg-secondary text-light outline-none">❮</a> 
+              <a href="#slide1" class="btn btn-circle  bg-secondary text-light outline-none">❯</a>
+            </div>
+          </div> 
+        </div>
+       <div class="flex justify-end lg:relative mt-3 lg:mt-0"> 
+        <div class="lg:absolute bg-secondary  lg:w-[600px] lg:-top-52 w-full lg:mr-8 p-8 rounded-lg space-y-6" >
+         <h1 class="text-light font-extrabold text-2xl ">Meet all the heroes from the field</h1>
+         <p class="text-light-50">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+        </div>
+       </div>
+      </section>
+      <!-- carousel -->
+
+
+      <!-- professionals -->
+      <section class="my-20">
+        <div class="flex justify-center items-center flex-col space-y-6"> 
+          <h1 class="text-3xl font-extrabold text-secondary">Professional Hockeys Club</h1>
+          <p class="text-dark-100 w-[900px] text-center">Dit amet consectetur. Condimentum dignissim adipiscing Dit amet consectetur. Condimentum dignissim adipisc aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+        </div>
+      </section>
+      <!-- professionals -->
+
+
+
+
+      <section class="my-20">
+        <div class="flex justify-center items-center flex-col space-y-6"> 
+          <h1 class="text-3xl font-extrabold text-secondary">Professional Hockeys Club</h1>
+          <p class="text-dark-100 w-[900px] text-center">Dit amet consectetur. Condimentum dignissim adipiscing Dit amet consectetur. Condimentum dignissim adipisc aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+        </div>
+      </section>
+    </main>
    
   </body>
 </html>
