--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
               "primary-100": "#fa1916",
               secondary: "#131318",
               light: "#fff",
-              "light-100": "#1313180F",
               'dark-100': '#13131899'
             },
           },
@@ -162,6 +161,7 @@
       </section>
       <!-- carousel -->
 
+      <hr class="border border-dashed border-gray-200 my-20">
 
       <!-- professionals -->
       <section class="my-20">
@@ -169,12 +169,34 @@
           <h1 class="text-3xl font-extrabold text-secondary">Professional Hockeys Club</h1>
           <p class="text-dark-100 w-[900px] text-center">Dit amet consectetur. Condimentum dignissim adipiscing Dit amet consectetur. Condimentum dignissim adipisc aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
         </div>
+        <hr class="border border-dashed border-gray-200 my-20">
+
+        <div class="grid grid-cols-1 lg:grid-cols-4" >
+          <div class=" flex flex-col items-center justify-center space-y-4 p-6">
+            <div class="radial-progress text-primary rotate-180 text-4xl" style="--value:87; --size:6rem" role="progressbar"><span class="rotate-180 text-secondary text-2xl font-extrabold">87%</span></div>
+            <h2 class="font-2xl text-secondary font-bold ">Prayer Facility </h2>
+            <p class="text-center text-dark-50 w-[250px]">Amet consectetur. Condimentum dignissim adipiscing .</p>
+          </div>
+          <div class=" flex flex-col items-center justify-center space-y-4 p-6">
+            <div class="radial-progress text-green-500 rotate-180 text-4xl" style="--value:90; --size:6rem" role="progressbar"><span class="rotate-180 text-secondary text-2xl font-extrabold">90%</span></div>
+            <h2 class="font-2xl text-secondary font-bold ">Prayer Facility </h2>
+            <p class="text-center text-dark-50 w-[250px]">Amet consectetur. Condimentum dignissim adipiscing .</p>
+          </div>
+          <div class=" flex flex-col items-center justify-center space-y-4 p-6">
+            <div class="radial-progress text-amber-400 rotate-180 text-4xl" style="--value:80; --size:6rem" role="progressbar"><span class="rotate-180 text-secondary text-2xl font-extrabold">80%</span></div>
+            <h2 class="font-2xl text-secondary font-bold ">Prayer Facility </h2>
+            <p class="text-center text-dark-50 w-[250px]">Amet consectetur. Condimentum dignissim adipiscing .</p>
+          </div>
+          <div class=" flex flex-col items-center justify-center space-y-4 p-6">
+            <div class="radial-progress text-blue-500 rotate-180 text-4xl " style="--value:80; --size:6rem" role="progressbar"><span class="rotate-180 text-secondary text-2xl font-extrabold">80%</span></div>
+            <h2 class="font-2xl text-secondary font-bold ">Prayer Facility </h2>
+            <p class="text-center text-dark-50 w-[250px]">Amet consectetur. Condimentum dignissim adipiscing .</p>
+          </div>
+        </div>
       </section>
       <!-- professionals -->
-
-
-
-
+     <hr class="border border-dashed border-gray-200 my-20">
+     
       <section class="my-20">
         <div class="flex justify-center items-center flex-col space-y-6"> 
           <h1 class="text-3xl font-extrabold text-secondary">Professional Hockeys Club</h1>
