Professional Hockeys Club responsive completed

--- a/index.html
+++ b/index.html
@@ -161,15 +161,17 @@
       </section>
       <!-- carousel -->
 
-      <hr class="border border-dashed border-gray-200 my-20">
 
       <!-- professionals -->
-      <section class="my-20">
+      <section class="lg:my-20 my-6  px-2 lg:px-0">
+      <hr class="border border-dashed border-gray-200 lg:my-20  my-6 ">
+
         <div class="flex justify-center items-center flex-col space-y-6"> 
           <h1 class="text-3xl font-extrabold text-secondary">Professional Hockeys Club</h1>
-          <p class="text-dark-100 w-[900px] text-center">Dit amet consectetur. Condimentum dignissim adipiscing Dit amet consectetur. Condimentum dignissim adipisc aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+          <p class="text-dark-100 lg:w-[900px] text-center">Dit amet consectetur. Condimentum dignissim adipiscing Dit amet consectetur. Condimentum dignissim adipisc aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
         </div>
-        <hr class="border border-dashed border-gray-200 my-20">
+        <hr class="border border-dashed border-gray-200 lg:my-20  my-6 ">
+
 
         <div class="grid grid-cols-1 lg:grid-cols-4" >
           <div class=" flex flex-col items-center justify-center space-y-4 p-6">
@@ -195,13 +197,14 @@
         </div>
       </section>
       <!-- professionals -->
-     <hr class="border border-dashed border-gray-200 my-20">
-     
-      <section class="my-20">
+      <section class="lg:my-20 my-6  px-2 lg:px-0">
+        <hr class="border border-dashed border-gray-200 lg:my-20  my-6 ">
         <div class="flex justify-center items-center flex-col space-y-6"> 
           <h1 class="text-3xl font-extrabold text-secondary">Professional Hockeys Club</h1>
           <p class="text-dark-100 w-[900px] text-center">Dit amet consectetur. Condimentum dignissim adipiscing Dit amet consectetur. Condimentum dignissim adipisc aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
         </div>
+        <hr class="border border-dashed border-gray-200 lg:my-20  my-6 ">
+
       </section>
     </main>
    
