Clients Question completed

--- a/index.html
+++ b/index.html
@@ -580,15 +580,109 @@
           </p>
         </div>
         <hr class="border border-dashed border-gray-200 lg:my-20 my-6" />
+
+        <div class="flex flex-col lg:flex-row gap-6 border rounded-3xl p-8">
+          <div class=""><img src="/images/11.png" alt="" /></div>
+          <div class="flex-1">
+            <div class="collapse collapse-plus border-b">
+              <input type="radio" name="my-accordion-3" checked="checked" />
+              <div class="collapse-title text-2xl font-bold text-secondary">
+                Our Equipment
+              </div>
+              <div class="collapse-content">
+                <p class="text-dark-100">
+                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                  elit enim sagittis turpis in magna. Dolor sit amet
+                  consectetur. Ut urna diam quis sagittis. Elit elit enim
+                  sagittis turpis in magna. Dolor sit amet consectetur. Ut urna
+                  diam quis sagittis. Elit elit enim sagittis turpis in magna.
+                </p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus border-b">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-2xl font-bold text-secondary">
+                Our Equipment
+              </div>
+              <div class="collapse-content">
+                <p class="text-dark-100">
+                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                  elit enim sagittis turpis in magna. Dolor sit amet
+                  consectetur. Ut urna diam quis sagittis. Elit elit enim
+                  sagittis turpis in magna. Dolor sit amet consectetur. Ut urna
+                  diam quis sagittis. Elit elit enim sagittis turpis in magna.
+                </p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus border-b">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-2xl font-bold text-secondary">
+                Our Equipment
+              </div>
+              <div class="collapse-content">
+                <p class="text-dark-100">
+                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                  elit enim sagittis turpis in magna. Dolor sit amet
+                  consectetur. Ut urna diam quis sagittis. Elit elit enim
+                  sagittis turpis in magna. Dolor sit amet consectetur. Ut urna
+                  diam quis sagittis. Elit elit enim sagittis turpis in magna.
+                </p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus border-b">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-2xl font-bold text-secondary">
+                Our Equipment
+              </div>
+              <div class="collapse-content">
+                <p class="text-dark-100">
+                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                  elit enim sagittis turpis in magna. Dolor sit amet
+                  consectetur. Ut urna diam quis sagittis. Elit elit enim
+                  sagittis turpis in magna. Dolor sit amet consectetur. Ut urna
+                  diam quis sagittis. Elit elit enim sagittis turpis in magna.
+                </p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus border-b">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-2xl font-bold text-secondary">
+                Our Equipment
+              </div>
+              <div class="collapse-content">
+                <p class="text-dark-100">
+                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                  elit enim sagittis turpis in magna. Dolor sit amet
+                  consectetur. Ut urna diam quis sagittis. Elit elit enim
+                  sagittis turpis in magna. Dolor sit amet consectetur. Ut urna
+                  diam quis sagittis. Elit elit enim sagittis turpis in magna.
+                </p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus border-b">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-2xl font-bold text-secondary">
+                Our Equipment
+              </div>
+              <div class="collapse-content">
+                <p class="text-dark-100">
+                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                  elit enim sagittis turpis in magna. Dolor sit amet
+                  consectetur. Ut urna diam quis sagittis. Elit elit enim
+                  sagittis turpis in magna. Dolor sit amet consectetur. Ut urna
+                  diam quis sagittis. Elit elit enim sagittis turpis in magna.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
       <!-- Clients Question -->
-
+      <!-- Get In Touch -->
       <section class="lg:my-20 my-6 px-2 lg:px-0">
         <hr class="border border-dashed border-gray-200 lg:my-20 my-6" />
         <div class="flex justify-center items-center flex-col space-y-6">
-          <h1 class="text-3xl font-extrabold text-secondary">
-            Professional Hockeys Club
-          </h1>
+          <h1 class="text-3xl font-extrabold text-secondary">Get In Touch</h1>
           <p class="text-dark-100 lg:w-[900px] text-center">
             Dit amet consectetur. Condimentum dignissim adipiscing Dit amet
             consectetur. Condimentum dignissim adipisc aliquam turpis placerat
@@ -597,6 +691,7 @@
         </div>
         <hr class="border border-dashed border-gray-200 lg:my-20 my-6" />
       </section>
+      <!-- Get In Touch -->
     </main>
   </body>
 </html>
