All section compelete

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             "primary-100": "#fa1916",
             secondary: "#131318",
             light: "#fff",
+            'light-50':'#FFFFFF99',
             "dark-100": "#13131899",
           },
         },
@@ -633,33 +634,59 @@
   </main>
 
 
-  <footer class="bg-secondary py-24">
-    <div class="container mx-auto grid grid-cols-1 lg:grid-cols-4 text-center  ">
-    <div>
-    <h2></h2>
+  <footer class="bg-secondary lg:py-24 py-12">
+    <div class="container mx-auto grid grid-cols-1 lg:grid-cols-4 
+   text-light-50  space-y-10 lg:space-y-0 lg:gap-64">
+
+
+
+
+    <div class="lg:space-y-6 space-y-4">
+    <h2 class="font-extrabold text-3xl text-light text-center  lg:text-start">Get In Touch</h2>
+    <p class=" w-[300px] lg:w-auto mx-auto ">Dit amet consectetur. Condimentum  adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+      <div class="flex gap-3 items-center justify-center lg:justify-start"><i class="fa-regular fa-envelope text-primary"></i>hockeys@support.com</div>
+      <div class="flex gap-3 items-center justify-center lg:justify-start"><i class="fa-solid fa-phone  text-primary"></i> 342938490238</div>
     </div> 
-  <div class="col-span-2 grid  grid-cols-2">
-    <nav>
-      <header class="footer-title">Services</header> 
-      <a class="link link-hover">Branding</a>
-      <a class="link link-hover">Design</a>
-      <a class="link link-hover">Marketing</a>
-      <a class="link link-hover">Advertisement</a>
-    </nav> 
-    <nav>
-      <header class="footer-title">Company</header> 
-      <a class="link link-hover">About us</a>
-      <a class="link link-hover">Contact</a>
-      <a class="link link-hover">Jobs</a>
-      <a class="link link-hover">Press kit</a>
-    </nav> 
+
+
+  <div class="col-span-2 grid  grid-cols-2 text-center  lg:text-start lg:gap-72">
+   <nav class="flex flex-col gap-6">
+    <header class="footer-title">Company</header> 
+    <ul class="space-y-6">
+      <li><a href=""></a>About us</li>
+      <li><a href=""></a>Contact</li>
+      <li><a href=""></a>Jobs</li>
+      <li><a href=""></a>Press kit</li>
+      <li><a href=""></a>Press kit</li>
+      <li><a href=""></a>Press kit</li>
+    </ul>
+   </nav>
+   <div class="flex flex-col gap-6">
+    <header class="footer-title">Company</header> 
+    <ul class="space-y-6">
+      <li><a href=""></a>About us</li>
+      <li><a href=""></a>Contact</li>
+      <li><a href=""></a>Jobs</li>
+      <li><a href=""></a>Press kit</li>
+      <li><a href=""></a>Press kit</li>
+      <li><a href=""></a>Press kit</li>
+    </ul>
+   </div>
   </div>
-    <nav>
-      <header class="footer-title">Legal</header> 
-      <a class="link link-hover">Terms of use</a>
-      <a class="link link-hover">Privacy policy</a>
-      <a class="link link-hover">Cookie policy</a>
-    </nav>
+
+
+
+  <div class="flex flex-col gap-6  text-center lg:text-start">
+    <header class="footer-title">Company</header> 
+    <ul class="space-y-6">
+      <li><a href=""></a>About us</li>
+      <li><a href=""></a>Contact</li>
+      <li><a href=""></a>Jobs</li>
+      <li><a href=""></a>Press kit</li>
+      <li><a href=""></a>Press kit</li>
+      <li><a href=""></a>Press kit</li>
+    </ul>
+   </div>
   </div>
   </footer>
 </body>
