All content Updated and fixed issues

--- a/index.html
+++ b/index.html
@@ -99,28 +99,28 @@
     <section class="my-5">
       <div class="carousel w-full lg:h-[70vh]">
         <div id="slide1" class="carousel-item relative w-full">
-          <img src="images/1.png" class="w-full" />
-          <div class="absolute flex justify-between transform left-10 bottom-5 space-x-5">
+          <img src="images/1.png" class="w-full rounded-xl" />
+          <div class="absolute flex justify-between transform  left-[39%] lg:left-5  bottom-5  space-x-5">
             <a href="#slide4" class="btn btn-circle bg-secondary text-light outline-none">❮</a>
             <a href="#slide2" class="btn btn-circle bg-secondary text-light outline-none">❯</a>
           </div>
         </div>
         <div id="slide2" class="carousel-item relative w-full">
-          <img src="images/2.png" class="w-full" />
+          <img src="images/2.png" class="w-full  rounded-xl" />
           <div class="absolute flex justify-between transform left-10 bottom-5 space-x-5">
             <a href="#slide1" class="btn btn-circle bg-secondary text-light outline-none">❮</a>
             <a href="#slide3" class="btn btn-circle bg-secondary text-light outline-none">❯</a>
           </div>
         </div>
         <div id="slide3" class="carousel-item relative w-full">
-          <img src="images/3.png" class="w-full" />
+          <img src="images/3.png" class="w-full  rounded-xl" />
           <div class="absolute flex justify-between transform left-10 bottom-5 space-x-5">
             <a href="#slide2" class="btn btn-circle bg-secondary text-light outline-none">❮</a>
             <a href="#slide4" class="btn btn-circle bg-secondary text-light outline-none">❯</a>
           </div>
         </div>
         <div id="slide4" class="carousel-item relative w-full">
-          <img src="images/4.png" class="w-full" />
+          <img src="images/4.png" class="w-full  rounded-xl" />
           <div class="absolute flex justify-between transform left-10 bottom-5 space-x-5">
             <a href="#slide3" class="btn btn-circle bg-secondary text-light outline-none">❮</a>
             <a href="#slide1" class="btn btn-circle bg-secondary text-light outline-none">❯</a>
@@ -217,9 +217,9 @@
       <hr class="border border-dashed border-gray-200 lg:my-20 my-6" />
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
         <div
-          class="bg-[linear-gradient(to_right_bottom,rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url('images/2.png')] bg-cover rounded-3xl p-10 pt-28 space-y-6">
+          class="bg-[linear-gradient(to_right_bottom,rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url('images/2.png')] bg-cover rounded-3xl p-10 lg:pt-28 space-y-6">
           <h2 class="text-3xl text-light font-extrabold">Junior Program</h2>
-          <p class="font-semibold text-light w-[80%]">
+          <p class="font-semibold text-light lg:w-[80%]">
             Welcome to the Young Explorers Program, a vibrant and engaging initiative designed specifically for our
             youngest participants. This program caters to the curiosity and boundless energy of junior attendees,
             providing a nurturing environment for learning and play.
@@ -227,9 +227,9 @@
           <a class="btn bg-primary hover:bg-primary-100 text-light transition-colors px-6 py-4">Register Now!</a>
         </div>
         <div
-          class="bg-[linear-gradient(to_right_bottom,rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url('images/3.png')] bg-cover rounded-3xl p-10 pt-28 space-y-6">
+          class="bg-[linear-gradient(to_right_bottom,rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url('images/3.png')] bg-cover rounded-3xl p-10 lg:pt-28 space-y-6">
           <h2 class="text-3xl text-light font-extrabold">Teenager Program</h2>
-          <p class="font-semibold text-light w-[80%]">
+          <p class="font-semibold text-light lg:w-[80%]">
             Welcome to the <span class="text-primary"> " High speed hockey "</span>, an exciting and empowering program
             designed exclusively for teenagers. This dynamic initiative offers a platform for self-discovery, skill
             development, and meaningful connections, catering to the diverse interests and aspirations of our teenage
@@ -238,9 +238,9 @@
           <a class="btn bg-primary hover:bg-primary-100 text-light transition-colors px-6 py-4">Register Now!</a>
         </div>
         <div
-          class="bg-[linear-gradient(to_right_bottom,rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url('images/4.png')] bg-cover rounded-[40px] p-10 pt-52 space-y-6 lg:col-span-2">
+          class="bg-[linear-gradient(to_right_bottom,rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url('images/4.png')] bg-cover rounded-[40px] p-10 lg:pt-52 space-y-6 lg:col-span-2">
           <h2 class="text-3xl text-light font-extrabold">Professional Program</h2>
-          <p class="font-semibold text-light lg:w-[40%] w-[60%]">
+          <p class="font-semibold text-light lg:w-[40%] ">
             Step into the realm of the Professional <span class="text-primary"> " High speed hockey "</span>, a premier
             program meticulously crafted for individuals seeking to enhance their professional skills, expand their
             knowledge base, and excel in their respective fields. This comprehensive initiative provides a dynamic
