--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Home | This Is Hockey’s</title>
+  <title>Home | High Speed Hockey</title>
 
   <!-- tailwind and daisy ui -->
 
