--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@
         <div class="flex gap-3 items-center justify-center lg:justify-start"><i
             class="fa-regular fa-envelope text-primary"></i>hockeys@support.com</div>
         <div class="flex gap-3 items-center justify-center lg:justify-start"><i
-            class="fa-solid fa-phone  text-primary"></i> 342938490238</div>
+            class="fa-solid fa-phone  text-primary"></i> (+62) 123-321-543</div>
       </div>
       <div class="col-span-2 grid  grid-cols-2 text-center  lg:text-start lg:gap-72">
         <nav class="flex flex-col gap-6">
