--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   <main class="container mx-auto px-2 lg:px-0">
     <!-- carousel -->
     <section class="my-5">
-      <div class="carousel w-full lg:h-[70vh]">
+      <div class="carousel w-full lg:h-[600px]">
         <div id="slide1" class="carousel-item relative w-full">
           <img src="images/1.png" class="w-full rounded-xl" />
           <div class="absolute flex justify-between transform  left-[39%] lg:left-5  bottom-5  space-x-5">
@@ -107,21 +107,21 @@
         </div>
         <div id="slide2" class="carousel-item relative w-full">
           <img src="images/2.png" class="w-full  rounded-xl" />
-          <div class="absolute flex justify-between transform left-10 bottom-5 space-x-5">
+          <div class="absolute flex justify-between transform  left-[39%] lg:left-5  bottom-5  space-x-5">
             <a href="#slide1" class="btn btn-circle bg-secondary text-light outline-none">❮</a>
             <a href="#slide3" class="btn btn-circle bg-secondary text-light outline-none">❯</a>
           </div>
         </div>
         <div id="slide3" class="carousel-item relative w-full">
           <img src="images/3.png" class="w-full  rounded-xl" />
-          <div class="absolute flex justify-between transform left-10 bottom-5 space-x-5">
+          <div class="absolute flex justify-between transform  left-[39%] lg:left-5  bottom-5  space-x-5">
             <a href="#slide2" class="btn btn-circle bg-secondary text-light outline-none">❮</a>
             <a href="#slide4" class="btn btn-circle bg-secondary text-light outline-none">❯</a>
           </div>
         </div>
         <div id="slide4" class="carousel-item relative w-full">
           <img src="images/4.png" class="w-full  rounded-xl" />
-          <div class="absolute flex justify-between transform left-10 bottom-5 space-x-5">
+          <div class="absolute flex justify-between transform  left-[39%] lg:left-5  bottom-5  space-x-5">
             <a href="#slide3" class="btn btn-circle bg-secondary text-light outline-none">❮</a>
             <a href="#slide1" class="btn btn-circle bg-secondary text-light outline-none">❯</a>
           </div>
